# handigo-web

./: CWallet.jsx  Services.jsx  index.html  package-lock.json  package.json  vite.config.js
server/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
server/src/handigo_service/: config.py  dependancy_container.py  resources.py
server/src/handigo_service/application/dto/: __init__.py  auth.py  dashboard.py  profile.py
server/src/handigo_service/application/exceptions/: __init__.py  auth.py
server/src/handigo_service/application/model/: __init__.py  base.py  job.py  notification.py  review.py  user.py  wallet.py
server/src/handigo_service/application/port/: __init__.py  artisan_repository.py  email_service.py  otp_store.py  password_hasher.py  token_service.py  unit_of_work.py  user_repository.py
server/src/handigo_service/application/repository/: __init__.py  user.py
server/src/handigo_service/application/use_case/: __init__.py  auth.py  customer_profile.py  user_profile.py
server/src/handigo_service/handlers/: __init__.py
server/src/handigo_service/handlers/identity/: __init__.py  handler.py  resources.py
server/src/handigo_service/infrastructure/: utils.py
server/src/handigo_service/infrastructure/adapter/email_service/: __init__.py  sendgrid.py  smtp.py
server/src/handigo_service/infrastructure/adapter/otp_store/: __init__.py  redis_store.py
server/src/handigo_service/infrastructure/adapter/password_hasher/: __init__.py  bcrypt.py
server/src/handigo_service/infrastructure/repository/: exceptions.py  unit_of_work.py  user.py  utils.py
server/src/handigo_service/interface/api/: auth.py
server/src/handigo_service/interface/cli/: app.py
server/src/handigo_service/pkg/: __init__.py  utils.py
src/: App.jsx  (+1 more)
(+78 files in other folders)
